# Canopy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
docs/: ARCHITECTURE.md  KEYBINDINGS.md  ROADMAP.md
src/: ai.rs  app.rs  compile.rs  config.rs  finder.rs  fs.rs  main.rs  pdf.rs  syntax.rs  theme.rs
src/editor/: mod.rs  modes.rs
src/ui/: ai.rs  browser.rs  editor.rs  finder.rs  mod.rs  preview.rs  status.rs  title_bar.rs
