[package]
name = "canopy"
version = "0.1.0"
edition = "2021"
description = "Canopy — a local terminal LaTeX editor with sandboxed Docker compilation and inline PDF preview"
license = "MIT"

[[bin]]
name = "canopy"
path = "src/main.rs"

[dependencies]
# ─── Async runtime (compilation drives Docker asynchronously) ─────────────
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# ─── Terminal UI ──────────────────────────────────────────────────────────
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
# Inline image rendering (Kitty / iTerm2 / Sixel, with halfblock fallback)
ratatui-image = "4"
image = "0.25"

# ─── Editor text buffer ───────────────────────────────────────────────────
ropey = "1.6"

# ─── Sandboxed compilation: drive the Docker Engine API directly ──────────
# Spins up an ephemeral TeX Live container with network=none, a memory cap,
# and a hard timeout — the security model from the original design, run locally.
bollard = "0.18"

# ─── PDF rasterization for inline preview ─────────────────────────────────
# Requires the PDFium shared library at runtime (documented in README).
pdfium-render = "0.8"

# ─── CLI / errors ─────────────────────────────────────────────────────────
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
